# Object_Recognition_and_Alignment-ROS-RCNN-PCL-Qt-GUI

./: README.md  software.md
src/qt_ros_pcl/: CMakeLists.txt  package.xml
src/qt_ros_pcl/gui/: gui_node.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qvtk.cpp  qvtk.h
src/qt_ros_pcl/include/: camera.config  gui_node.h  objreco.h  pcd_io.h  qalign.h  qpcl.h  qros.h  qsocket.h
src/qt_ros_pcl/msg/: info.msg
src/qt_ros_pcl/pcd/model/: model1.pcd  model2.pcd  model3.pcd  model4.pcd  model5.pcd  model6.pcd  model7.pcd  model8.pcd  model9.pcd
src/qt_ros_pcl/resources/: config.ini  config_base.ini  source.qrc
src/qt_ros_pcl/scripts/: requirements.txt  socket_tf_master.py  tf_dete.py
src/qt_ros_pcl/scripts/mrcnn/: model.py  utils.py  visualize.py
src/qt_ros_pcl/scripts/mrcnn/milk_vida_dataset/test_sample/: via_region_data.json
src/qt_ros_pcl/scripts/mrcnn/milk_vida_dataset/train/: via_region_data.json
src/qt_ros_pcl/scripts/mrcnn/milk_vida_dataset/val/: via_region_data.json
src/qt_ros_pcl/scripts/mrcnn/milkvsvida/: maskrcnn_download.ipynb  milkvsvida.py  milkvsvida_0604.ipynb
src/qt_ros_pcl/src/: basic.cpp  index.md  objreco.cpp  pcd_io.cpp  qalign.cpp  qpcl.cpp  qpcl.h  qros.cpp  qsocket.cpp
src/qt_ros_pcl/temp/: CMakeLists.txt
src/qt_ros_pcl/temp/src/: normal_distributions_transform.cpp
